--- a/src/MEGASync/gui/ui/BannerWidget.ui
+++ b/src/MEGASync/gui/ui/BannerWidget.ui
@@ -18,8 +18,8 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>40</width>
-    <height>42</height>
+    <width>0</width>
+    <height>0</height>
    </size>
   </property>
   <property name="maximumSize">
@@ -116,7 +116,7 @@
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
-     <layout class="QHBoxLayout" name="horizontalLayout_2">
+     <layout class="QHBoxLayout" name="contentLayout">
       <property name="spacing">
        <number>8</number>
       </property>
@@ -176,6 +176,9 @@
            <property name="text">
             <string notr="true"/>
            </property>
+           <property name="textFormat">
+            <enum>Qt::RichText</enum>
+           </property>
            <property name="openExternalLinks">
             <bool>true</bool>
            </property>
@@ -204,6 +207,9 @@
            <property name="text">
             <string notr="true"/>
            </property>
+           <property name="textFormat">
+            <enum>Qt::RichText</enum>
+           </property>
            <property name="openExternalLinks">
             <bool>true</bool>
            </property>
@@ -212,7 +218,7 @@
            </property>
           </widget>
          </item>
-         <item row="0" column="0">
+         <item row="0" column="0" alignment="Qt::AlignTop">
           <widget class="QToolButton" name="lIcon">
            <property name="sizePolicy">
             <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
