--- a/src/MEGASync/gui/ui/BandwidthSettings.ui
+++ b/src/MEGASync/gui/ui/BandwidthSettings.ui
@@ -496,7 +496,7 @@ background-color: #FFFFFF; /*colorToken.page-background*/
        <property name="minimumSize">
         <size>
          <width>0</width>
-         <height>50</height>
+         <height>0</height>
         </size>
        </property>
        <property name="maximumSize">
@@ -549,14 +549,14 @@ background-color: #FFFFFF; /*colorToken.page-background*/
             </property>
             <property name="minimumSize">
              <size>
-              <width>48</width>
-              <height>25</height>
+              <width>0</width>
+              <height>0</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
-              <width>48</width>
-              <height>25</height>
+              <width>16777215</width>
+              <height>16777215</height>
              </size>
             </property>
             <property name="cursor">
@@ -616,14 +616,14 @@ background-color: #FFFFFF; /*colorToken.page-background*/
             </property>
             <property name="minimumSize">
              <size>
-              <width>48</width>
-              <height>25</height>
+              <width>0</width>
+              <height>0</height>
              </size>
             </property>
             <property name="maximumSize">
              <size>
-              <width>48</width>
-              <height>25</height>
+              <width>16777215</width>
+              <height>16777215</height>
              </size>
             </property>
             <property name="cursor">
