Fix issues with radio buttons

--- a/src/MEGASync/gui/Resources_dark.qrc
+++ b/src/MEGASync/gui/Resources_dark.qrc
@@ -20,13 +20,13 @@
         <file alias="images/Small_Free@3x.png">images/Small_Free@3x.png</file>
         <file alias="images/help-icon.svg">images/help-icon.svg</file>
         <file alias="radio_unchecked">images/themed/dark/radio_unchecked.svg</file>
-        <file alias="radio_unchecked_pressed.svg">images/themed/dark/radio_unchecked_pressed.svg</file>
-        <file alias="radio_unchecked_hover.svg">images/themed/dark/radio_unchecked_hover.svg</file>
-        <file alias="radio_unchecked_disabled.svg">images/themed/dark/radio_unchecked_disabled.svg</file>
+        <file alias="radio_unchecked_pressed">images/themed/dark/radio_unchecked_pressed.svg</file>
+        <file alias="radio_unchecked_hover">images/themed/dark/radio_unchecked_hover.svg</file>
+        <file alias="radio_unchecked_disabled">images/themed/dark/radio_unchecked_disabled.svg</file>
         <file alias="radio_checked">images/themed/dark/radio_checked.svg</file>
-        <file alias="radio_checked_pressed.svg">images/themed/dark/radio_checked_pressed.svg</file>
-        <file alias="radio_checked_hover.svg">images/themed/dark/radio_checked_hover.svg</file>
-        <file alias="radio_checked_disabled.svg">images/themed/dark/radio_checked_disabled.svg</file>
+        <file alias="radio_checked_pressed">images/themed/dark/radio_checked_pressed.svg</file>
+        <file alias="radio_checked_hover">images/themed/dark/radio_checked_hover.svg</file>
+        <file alias="radio_checked_disabled">images/themed/dark/radio_checked_disabled.svg</file>
         <file alias="checkbox_on_pressed">images/themed/dark/checkbox_on_pressed.svg</file>
         <file alias="checkbox_on_hover">images/themed/dark/checkbox_on_hover.svg</file>
         <file alias="checkbox_on_disabled">images/themed/dark/checkbox_on_disabled.svg</file>
