--- a/src/MEGASync/gui/Resources_qml.qrc
+++ b/src/MEGASync/gui/Resources_qml.qrc
@@ -108,9 +108,11 @@
         <file alias="images/qml/onboarding/backup.png">images/qml/onboarding/backup.png</file>
         <file alias="images/qml/onboarding/sync.png">images/qml/onboarding/sync.png</file>
         <file alias="images/qml/dialog_message_critical.svg">images/qml/dialog_message_critical.svg</file>
+        <file alias="images/qml/dialog_message_cross.svg">images/qml/dialog_message_cross.svg</file>
         <file alias="images/qml/dialog_message_information.svg">images/qml/dialog_message_information.svg</file>
         <file alias="images/qml/dialog_message_question.svg">images/qml/dialog_message_question.svg</file>
         <file alias="images/qml/dialog_message_warning.svg">images/qml/dialog_message_warning.svg</file>
+        <file alias="images/qml/dialog_message_success.svg">images/qml/dialog_message_success.svg</file>
         <file alias="images/qml/arrows-up-down-circle.svg">images/qml/arrows-up-down-circle.svg</file>
         <file alias="images/qml/down-arrow.svg">images/qml/down-arrow.svg</file>
         <file alias="images/qml/up-arrow.svg">images/qml/up-arrow.svg</file>
